; ModuleID = '/home/carl/AnghaBench/postgres/src/backend/nodes/extr_outfuncs.c__outRowMarkClause.c'
source_filename = "/home/carl/AnghaBench/postgres/src/backend/nodes/extr_outfuncs.c__outRowMarkClause.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [14 x i8] c"ROWMARKCLAUSE\00", align 1
@rti = common dso_local global i32 0, align 4
@strength = common dso_local global i32 0, align 4
@LockClauseStrength = common dso_local global i32 0, align 4
@waitPolicy = common dso_local global i32 0, align 4
@LockWaitPolicy = common dso_local global i32 0, align 4
@pushedDown = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32, i32*)* @_outRowMarkClause to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @_outRowMarkClause(i32 %0, i32* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32*, align 8
  store i32 %0, i32* %3, align 4
  store i32* %1, i32** %4, align 8
  %5 = call i32 @WRITE_NODE_TYPE(i8* getelementptr inbounds ([14 x i8], [14 x i8]* @.str, i64 0, i64 0))
  %6 = load i32, i32* @rti, align 4
  %7 = call i32 @WRITE_UINT_FIELD(i32 %6)
  %8 = load i32, i32* @strength, align 4
  %9 = load i32, i32* @LockClauseStrength, align 4
  %10 = call i32 @WRITE_ENUM_FIELD(i32 %8, i32 %9)
  %11 = load i32, i32* @waitPolicy, align 4
  %12 = load i32, i32* @LockWaitPolicy, align 4
  %13 = call i32 @WRITE_ENUM_FIELD(i32 %11, i32 %12)
  %14 = load i32, i32* @pushedDown, align 4
  %15 = call i32 @WRITE_BOOL_FIELD(i32 %14)
  ret void
}

declare dso_local i32 @WRITE_NODE_TYPE(i8*) #1

declare dso_local i32 @WRITE_UINT_FIELD(i32) #1

declare dso_local i32 @WRITE_ENUM_FIELD(i32, i32) #1

declare dso_local i32 @WRITE_BOOL_FIELD(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
